--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+Among Pirates_clone_0/
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
